saves/test/demo_CMB_20240802_193341/conditional/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp conditional_tb.v conditional.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
conditional_tb.v:74: $finish called at 8000 (1ps)

iverilog cmd 2 error:

